--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.0",
-        "socket.io": "^2.0.15"
+        "socket.io": "^4.5.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
+        "@types/socket.io": "^3.0.2",
         "nodemon": "^2.0.15"
     }
 }
