--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "surd.io",
     "version": "1.0.0",
     "description": "",
-    "main": "main.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
-        "start": "node main.js",
-        "dev": "nodemon main.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js"
     },
     "keywords": [],
     "author": "",
